--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
 
                         <div class="col-md-4 wow fadeInLeft">
                             <h3><span class="id-color">Residential</span> Design</h3>
+                            <span style="color: #000;">
                            The art and science of creating functional, aesthetically pleasing living spaces within homes. It involves carefully planning and organizing the layout, selecting and arranging furniture, choosing color schemes, and incorporating decorative elements to create an inviting environment.
+                            </span>
                             <div class="spacer-single"></div>
                             <a class="image-popup-no-margins" href="images/misc/pic_1.jpg">
                                 <img src="images/misc/pic_1.jpg" class="img-responsive" alt="">
@@ -192,7 +194,9 @@
 
                         <div class="col-md-4 wow fadeInUp" data-wow-delay=".2s">
                             <h3><span class="id-color">Office</span> Design</h3>
+                            <span style="color: #000;">
                             Establishing a conducive and efficient workspace that aligns with the organization's objectives. It encompasses creating a functional and well-organized environment that enhances productivity, supports effective collaboration, and prioritizes employee well-being and motivation.
+                            </span>
                             <div class="spacer-single"></div>
                             <a class="image-popup-no-margins" href="images/misc/pic_2.jpg">
                                 <img src="images/misc/pic_2.jpg" class="img-responsive" alt="">
@@ -201,7 +205,9 @@
 
                         <div class="col-md-4 wow fadeInRight">
                             <h3><span class="id-color">Commercial</span> Design</h3>
-                            Creating functional and visually appealing spaces for businesses, retail stores, and other commercial establishments. It involves understanding the unique needs and goals of the business and translating them into a well-designed space that enhances the customer experience. 
+                            <span style="color: #000;">
+                                Creating functional and visually appealing spaces for businesses, retail stores, and other commercial establishments. It involves understanding the unique needs and goals of the business and translating them into a well-designed space that enhances the customer experience.
+                            </span>
                             <div class="spacer-single"></div>
                             <a class="image-popup-no-margins" href="images/misc/pic_3.jpg">
                                 <img src="images/misc/pic_3.jpg" class="img-responsive" alt="">
